@@ -1,5 +1,7 @@
 package cn.sduonline.business.service;
 
+import cn.sduonline.business.data.projection.MediaSummaryRow;
+import cn.sduonline.business.data.projection.TimeComparisonSummaryRow;
 import cn.sduonline.business.data.po.Location;
 import cn.sduonline.business.data.po.TimeComparison;
 import cn.sduonline.business.data.po.TimeComparisonItem;
@@ -7,7 +9,6 @@ import cn.sduonline.business.data.vo.MediaSummaryVO;
 import cn.sduonline.business.data.vo.TimeComparisonDetailVO;
 import cn.sduonline.business.data.vo.TimeComparisonSummaryVO;
 import cn.sduonline.business.mapper.LocationMapper;
-import cn.sduonline.business.mapper.MediaMapper;
 import cn.sduonline.business.mapper.TimeComparisonItemMapper;
 import cn.sduonline.business.mapper.TimeComparisonMapper;
 import cn.sduonline.common.exception.BizCode;
@@ -17,6 +18,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.LinkedHashMap;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -25,19 +28,27 @@ public class TimeComparisonService {
 
     private final TimeComparisonMapper comparisonMapper;
     private final TimeComparisonItemMapper itemMapper;
-    private final MediaMapper mediaMapper;
     private final LocationMapper locationMapper;
     private final MediaService mediaService;
 
     public List<TimeComparisonSummaryVO> list(Long locationId, int size) {
-        int safeSize = Math.min(Math.max(size, 1), 100);
-        return comparisonMapper.selectList(new LambdaQueryWrapper<TimeComparison>()
-                        .eq(TimeComparison::getStatus, VISIBLE)
-                        .eq(locationId != null, TimeComparison::getLocationId, locationId)
-                        .orderByDesc(TimeComparison::getUpdatedAt)
-                        .last("LIMIT " + safeSize))
-                .stream()
-                .map(this::toSummary)
+        int safeSize = Math.clamp(size, 1, 100);
+        List<TimeComparisonSummaryRow> rows = comparisonMapper.selectSummaryRows(locationId, safeSize);
+        Map<Long, TimeComparisonSummaryRow> headers = new LinkedHashMap<>();
+        Map<Long, List<MediaSummaryVO>> mediaByComparison = new LinkedHashMap<>();
+        for (TimeComparisonSummaryRow row : rows) {
+            headers.putIfAbsent(row.getComparisonId(), row);
+            List<MediaSummaryVO> media = mediaByComparison.computeIfAbsent(
+                    row.getComparisonId(), _ -> new java.util.ArrayList<>()
+            );
+            if (row.getMediaId() != null) media.add(toMediaSummary(row));
+        }
+        return headers.values().stream()
+                .map(row -> new TimeComparisonSummaryVO(
+                        row.getComparisonId(), row.getComparisonLocationId(),
+                        row.getComparisonLocationName(), row.getComparisonTitle(),
+                        row.getComparisonDescription(), mediaByComparison.get(row.getComparisonId())
+                ))
                 .toList();
     }
 
@@ -56,18 +67,18 @@ public class TimeComparisonService {
         );
     }
 
-    private TimeComparisonSummaryVO toSummary(TimeComparison comparison) {
-        Location location = locationMapper.selectById(comparison.getLocationId());
-        List<MediaSummaryVO> media = listItems(comparison.getId()).stream()
-                .map(TimeComparisonItem::getMediaId)
-                .map(mediaMapper::selectById)
-                .filter(item -> item != null && item.getStatus() == VISIBLE)
-                .map(mediaService::toSummary)
-                .toList();
-        return new TimeComparisonSummaryVO(
-                comparison.getId(), comparison.getLocationId(), location == null ? null : location.getName(),
-                comparison.getTitle(), comparison.getDescription(), media
-        );
+    private MediaSummaryVO toMediaSummary(TimeComparisonSummaryRow source) {
+        MediaSummaryRow row = new MediaSummaryRow();
+        row.setId(source.getMediaId());
+        row.setTitle(source.getMediaTitle());
+        row.setLocationId(source.getMediaLocationId());
+        row.setLocationName(source.getMediaLocationName());
+        row.setThumbnailKey(source.getMediaThumbnailKey());
+        row.setShotAt(source.getMediaShotAt());
+        row.setViewCount(source.getMediaViewCount());
+        row.setLikeCount(source.getMediaLikeCount());
+        row.setFavoriteCount(source.getMediaFavoriteCount());
+        return mediaService.toSummary(row);
     }
 
     private TimeComparison requireVisible(Long comparisonId) {
